--- a/venta/css/global.css
+++ b/venta/css/global.css
@@ -26,14 +26,12 @@ body,
 }
 
 * {
-	margin: 0;
 	padding: 0
 }
 
 body {
 	font-family: "proxima-nova", sans-serif;
 	line-height: 1.4;
-	font-size: 16px
 }
 
 @media (min-width: 1101px) {
@@ -100,7 +98,6 @@ h6 b {
 h1 {
 	font-weight: 100;
 	text-transform: uppercase;
-	border-bottom-size: 2px;
 	padding: 2em 0 0.5em 0;
 	margin: 0 0 1.5em 0
 }
@@ -165,8 +162,6 @@ h3 {
 }
 
 * {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
 	box-sizing: border-box
 }
 
@@ -209,6 +204,11 @@ body {
 	}
 }
 
+.image-slider img {
+        max-width: 33%;
+        height: auto;
+}
+
 @media (min-width: 1101px) {
 	.module {
 		width: 48%;
@@ -218,11 +218,6 @@ body {
 	.module:nth-child(2n+1) {
 		margin-left: 0
 	}
-}
-
-.module-kiwi img {
-	width: 100%;
-	max-height: 400px
 }
 
 @media (max-width: 600px) {
@@ -330,10 +325,7 @@ img {
 
 .button:active {
 	border: 0;
-	-webkit-transform: translateY(5px);
-	-moz-transform: translateY(5px);
 	-ms-transform: translateY(5px);
-	-o-transform: translateY(5px);
 	transform: translateY(5px)
 }
 
