--- a/venta/style.css
+++ b/venta/style.css
@@ -4,10 +4,6 @@
   grid-gap: 20px;
 }
 
-.tile {
-  position: relative;
-}
-
 img {
   max-width: 100%;
   height: auto;
@@ -25,6 +21,130 @@ img {
   transition: opacity 0.2s ease-in-out;
 }
 
-.tile:hover .text {
+
+
+.menu {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+}
+
+.menu li {
+  margin: 0 10px;
+}
+
+.menu a {
+  display: block;
+  padding: 10px;
+  text-decoration: none;
+  color: #333;
+  font-weight: bold;
+}
+
+.menu a:hover {
+  background-color: #333;
+  color: #fff;
+}
+
+
+
+.site-header {
+	position: relative
+}
+
+
+h1{
+
+text-align: center;
+
+}
+
+
+
+
+.tiles {
+  font-size: 0;
+  text-align: center;
+  position: relative;
+}
+.tiles .tile {
+  display: inline-block;
+  margin: 10px;
+  text-align: left;
+  opacity: .99;
+  overflow: hidden;
+  position: relative;
+  border-radius: 3px;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.05);
+}
+.tiles .tile:before {
+  content: '';
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.7) 100%);
+  width: 100%;
+  height: 50%;
+  opacity: 0;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  z-index: 2;
+  transition-property: top, opacity;
+  transition-duration: 0.3s;
+}
+.tiles .tile img {
+  display: block;
+  max-width: 100%;
+  backface-visibility: hidden;
+}
+.tiles .tile .details {
+  font-size: 16px;
+  padding: 20px;
+  color: #fff;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: 3;
+}
+.tiles .tile .details span {
+  display: block;
+  opacity: 0;
+  position: relative;
+  top: 100px;
+  transition-property: top, opacity;
+  transition-duration: 0.3s;
+  transition-delay: 0s;
+}
+.tiles .tile .details .title {
+  line-height: 1;
+  font-weight: 600;
+  font-size: 18px;
+}
+.tiles .tile .details .info {
+  line-height: 1.2;
+  margin-top: 5px;
+  font-size: 12px;
+}
+.tiles .tile:focus:before,
+.tiles .tile:focus span,
+.tiles .tile:hover:before,
+.tiles .tile:hover span {
   opacity: 1;
 }
+.tiles .tile:focus:before,
+.tiles .tile:hover:before {
+  top: 50%;
+}
+.tiles .tile:focus span,
+.tiles .tile:hover span {
+  top: 0;
+}
+.tiles .tile:focus .title,
+.tiles .tile:hover .title {
+          transition-delay: 0.15s;
+}
+.tiles .tile:focus .info,
+.tiles .tile:hover .info {
+          transition-delay: 0.25s;
+}
+
